--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,19 +4,19 @@ import Icon from './Icon.astro';
 
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<Icon icon="rayo" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Somos Rapidos</h2>
+		<p>Escribenos por whatsapp o mandanos un correo con una foto y la localidad y te haremos un presupuesto de inmediato.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>Lideres en el sector</h2>
+		<p>Llevamas mas de 10 años restaurando bañeras y dejando clientes satisfechos</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<Icon icon="hucha" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Somos economicos</h2>
+		<p>Dejar tu Bañera nueva no te costara un ojo de la cara</p>
 	</div>
 </section>
 
